ref: due to markdow no longer use pre/pre-wrap for cites

--- a/app/assets/stylesheets/cites.css.scss
+++ b/app/assets/stylesheets/cites.css.scss
@@ -1,9 +1,5 @@
 /* -*- coding: utf-8 -*- */
 
-.posting-content.cite {
-  white-space: pre;
-	white-space: pre-wrap;
-}
 
 .cite .icon-message {
   cursor:default;
